# Projet-C--RPG-CLI

./: CMakeLists.txt  README.md  character.c  character.h  craft.c  craft.h  farm.c  farm.h  fight.c  fight.h  main.c  map.c  map.h  mobs.c  mobs.h  mobs.txt  move.c  move.h  pnj.c  pnj.h  save.c  save.h  struct.h
resources/: craft.txt  items.txt
sources/headers/: character.h  craft.h  mobs.h  move.h  struct.h
sources/sources/: character.c  craft.c  farm.c  fight.c  main.c  map.c  mobs.c  move.c  pnj.c  save.c
